Main search input completed

--- a/index.html
+++ b/index.html
@@ -26,5 +26,16 @@
         </div>
       </div>
     </header>
+    <main class="main">
+      <div class="container">
+        <div class="main__search">
+            <h1 class="main__search--title">Доска объявлений</h1>
+            <button class="main__search--choose--btn"><img class="main__search--choose--icon" src="images/burger-menu.svg" alt="">Все категории</button>
+            <input class="main__search--input" type="text" placeholder="Поиск по объявлениям">
+            <button class="main__search--find--btn">Найти <img class="main__search--find--icon" src="images/search.svg" alt=""></button>
+        </div>
+      </div>
+    </main>
+    <div class="line"></div>
   </body>
 </html>
