--- a/index.html
+++ b/index.html
@@ -29,13 +29,309 @@
     <main class="main">
       <div class="container">
         <div class="main__search">
-            <h1 class="main__search--title">Доска объявлений</h1>
-            <button class="main__search--choose--btn"><img class="main__search--choose--icon" src="images/burger-menu.svg" alt="">Все категории</button>
-            <input class="main__search--input" type="text" placeholder="Поиск по объявлениям">
-            <button class="main__search--find--btn">Найти <img class="main__search--find--icon" src="images/search.svg" alt=""></button>
+          <h1 class="main__search--title">Доска объявлений</h1>
+          <button class="main__search--choose--btn">
+            <img
+              class="main__search--choose--icon"
+              src="images/burger-menu.svg"
+              alt=""
+            />Все категории
+          </button>
+          <input
+            class="main__search--input"
+            type="text"
+            placeholder="Поиск по объявлениям"
+          />
+          <button class="main__search--find--btn">
+            Найти
+            <img
+              class="main__search--find--icon"
+              src="images/search.svg"
+              alt=""
+            />
+          </button>
+        </div>
+      </div>
+      <div class="line"></div>
+      <div class="recommendations">
+        <div class="container">
+          <h2 class="recommendations__title">Рекомендации для вас</h2>
+          <div class="recommendations__posts">
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture-2.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture-2.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture-2.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture-2.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture-2.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture-2.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture-2.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture-2.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+            <div class="recommendations__post">
+              <img
+                class="recommendations__post--img"
+                src="images/post-picture.png"
+                alt=""
+              />
+              <div class="recommendations__post--descr">
+                <a href="#!" class="recommendations__post--title"
+                  >Гитара Fender</a
+                >
+                <p class="recommendations__post--price">20 000 ₽</p>
+                <p class="recommendations__post--location">
+                  Москва, Ленинский проспект
+                </p>
+                <p class="recommendations__post--date">Сегодня 14:12</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
-    <div class="line"></div>
   </body>
 </html>
